Programas/C/CompiladorMiniC/src/minic.output
Estado 59 conflictos: 6 desplazamiento/reducción
Estado 81 conflictos: 10 desplazamiento/reducción
Estado 82 conflictos: 10 desplazamiento/reducción
Estado 83 conflictos: 10 desplazamiento/reducción
Estado 84 conflictos: 10 desplazamiento/reducción
Estado 85 conflictos: 10 desplazamiento/reducción
Estado 86 conflictos: 10 desplazamiento/reducción
Estado 87 conflictos: 6 desplazamiento/reducción
Estado 88 conflictos: 6 desplazamiento/reducción
Estado 89 conflictos: 6 desplazamiento/reducción
Estado 90 conflictos: 6 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations statement_list RCORCH

    3 $@2: ε

    4 declarations: declarations VAR $@2 identifier_list PUNTOCOMA

    5 $@3: ε

    6 declarations: declarations CONST $@3 identifier_list PUNTOCOMA
    7             | ε

    8 identifier_list: asig
    9                | identifier_list COMA asig

   10 asig: ID
   11     | ID ASSIGNOP expression

   12 statement_list: statement_list statement
   13               | ε

   14 statement: ID ASSIGNOP expression PUNTOCOMA
   15          | LCORCH statement_list RCORCH
   16          | IF LPAREN expression RPAREN statement ELSE statement
   17          | IF LPAREN expression RPAREN statement
   18          | WHILE LPAREN expression RPAREN statement
   19          | DO statement WHILE expression PUNTOCOMA
   20          | FOR ID INZ expression TO expression statement
   21          | FOR ID INZ expression COND expression statement
   22          | PRINT LPAREN print_list RPAREN PUNTOCOMA
   23          | READ LPAREN read_list RPAREN PUNTOCOMA

   24 print_list: print_item
   25           | print_list COMA print_item

   26 print_item: expression
   27           | STRING

   28 read_list: ID
   29          | read_list COMA ID

   30 expression: expression PLUSOP expression
   31           | expression MINUSOP expression
   32           | expression MULTOP expression
   33           | expression DIVOP expression
   34           | expression EQOP expression
   35           | expression NEQOP expression
   36           | expression LT expression
   37           | expression LTEQ expression
   38           | expression GT expression
   39           | expression GTEQ expression
   40           | LPAREN expression RPAREN
   41           | MINUSOP expression
   42           | ID
   43           | INTLITERAL


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    VAR (258) 4
    CONST (259) 6
    IF (260) 16 17
    WHILE (261) 18 19
    PRINT (262) 22
    READ (263) 23
    LPAREN (264) 2 16 17 18 22 23 40
    RPAREN (265) 2 16 17 18 22 23 40
    PUNTOCOMA (266) 4 6 14 19 22 23
    COMA (267) 9 25 29
    ASSIGNOP (268) 11 14
    LCORCH (269) 2 15
    RCORCH (270) 2 15
    DO (271) 19
    FOR (272) 20 21
    INZ (273) 20 21
    TO (274) 20
    EQOP (275) 34
    NEQOP (276) 35
    LT (277) 36
    LTEQ (278) 37
    GT (279) 38
    GTEQ (280) 39
    COND (281) 21
    INTLITERAL <cadena> (282) 43
    ID <cadena> (283) 2 10 11 14 20 21 28 29 42
    STRING <cadena> (284) 27
    OTHERELSE (285)
    ELSE (286) 16
    PLUSOP (287) 30
    MINUSOP (288) 31 41
    MULTOP (289) 32
    DIVOP (290) 33
    UMINUS (291)


No terminales con las reglas donde aparecen

    $accept (37)
        on left: 0
    program <codigo> (38)
        on left: 2
        on right: 0
    $@1 (39)
        on left: 1
        on right: 2
    declarations <codigo> (40)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (41)
        on left: 3
        on right: 4
    $@3 (42)
        on left: 5
        on right: 6
    identifier_list <codigo> (43)
        on left: 8 9
        on right: 4 6 9
    asig <codigo> (44)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (45)
        on left: 12 13
        on right: 2 12 15
    statement <codigo> (46)
        on left: 14 15 16 17 18 19 20 21 22 23
        on right: 12 16 17 18 19 20 21
    print_list <codigo> (47)
        on left: 24 25
        on right: 22 25
    print_item <codigo> (48)
        on left: 26 27
        on right: 24 25
    read_list <codigo> (49)
        on left: 28 29
        on right: 23 29
    expression <codigo> (50)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 11 14 16 17 18 19 20 21 26 30 31 32 33 34 35 36 37 38 39 40 41


Estado 0

    0 $accept: • program $end

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program • $end

    $end  desplazar e ir al estado 3


Estado 2

    2 program: $@1 • ID LPAREN RPAREN LCORCH declarations statement_list RCORCH

    ID  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end •

    $default  aceptar


Estado 4

    2 program: $@1 ID • LPAREN RPAREN LCORCH declarations statement_list RCORCH

    LPAREN  desplazar e ir al estado 5


Estado 5

    2 program: $@1 ID LPAREN • RPAREN LCORCH declarations statement_list RCORCH

    RPAREN  desplazar e ir al estado 6


Estado 6

    2 program: $@1 ID LPAREN RPAREN • LCORCH declarations statement_list RCORCH

    LCORCH  desplazar e ir al estado 7


Estado 7

    2 program: $@1 ID LPAREN RPAREN LCORCH • declarations statement_list RCORCH

    $default  reduce usando la regla 7 (declarations)

    declarations  ir al estado 8


Estado 8

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations • statement_list RCORCH
    4 declarations: declarations • VAR $@2 identifier_list PUNTOCOMA
    6             | declarations • CONST $@3 identifier_list PUNTOCOMA

    VAR    desplazar e ir al estado 9
    CONST  desplazar e ir al estado 10

    $default  reduce usando la regla 13 (statement_list)

    statement_list  ir al estado 11


Estado 9

    4 declarations: declarations VAR • $@2 identifier_list PUNTOCOMA

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 12


Estado 10

    6 declarations: declarations CONST • $@3 identifier_list PUNTOCOMA

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 13


Estado 11

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations statement_list • RCORCH
   12 statement_list: statement_list • statement

    IF      desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PRINT   desplazar e ir al estado 16
    READ    desplazar e ir al estado 17
    LCORCH  desplazar e ir al estado 18
    RCORCH  desplazar e ir al estado 19
    DO      desplazar e ir al estado 20
    FOR     desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 23


Estado 12

    4 declarations: declarations VAR $@2 • identifier_list PUNTOCOMA

    ID  desplazar e ir al estado 24

    identifier_list  ir al estado 25
    asig             ir al estado 26


Estado 13

    6 declarations: declarations CONST $@3 • identifier_list PUNTOCOMA

    ID  desplazar e ir al estado 24

    identifier_list  ir al estado 27
    asig             ir al estado 26


Estado 14

   16 statement: IF • LPAREN expression RPAREN statement ELSE statement
   17          | IF • LPAREN expression RPAREN statement

    LPAREN  desplazar e ir al estado 28


Estado 15

   18 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  desplazar e ir al estado 29


Estado 16

   22 statement: PRINT • LPAREN print_list RPAREN PUNTOCOMA

    LPAREN  desplazar e ir al estado 30


Estado 17

   23 statement: READ • LPAREN read_list RPAREN PUNTOCOMA

    LPAREN  desplazar e ir al estado 31


Estado 18

   15 statement: LCORCH • statement_list RCORCH

    $default  reduce usando la regla 13 (statement_list)

    statement_list  ir al estado 32


Estado 19

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations statement_list RCORCH •

    $default  reduce usando la regla 2 (program)


Estado 20

   19 statement: DO • statement WHILE expression PUNTOCOMA

    IF      desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PRINT   desplazar e ir al estado 16
    READ    desplazar e ir al estado 17
    LCORCH  desplazar e ir al estado 18
    DO      desplazar e ir al estado 20
    FOR     desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 33


Estado 21

   20 statement: FOR • ID INZ expression TO expression statement
   21          | FOR • ID INZ expression COND expression statement

    ID  desplazar e ir al estado 34


Estado 22

   14 statement: ID • ASSIGNOP expression PUNTOCOMA

    ASSIGNOP  desplazar e ir al estado 35


Estado 23

   12 statement_list: statement_list statement •

    $default  reduce usando la regla 12 (statement_list)


Estado 24

   10 asig: ID •
   11     | ID • ASSIGNOP expression

    ASSIGNOP  desplazar e ir al estado 36

    $default  reduce usando la regla 10 (asig)


Estado 25

    4 declarations: declarations VAR $@2 identifier_list • PUNTOCOMA
    9 identifier_list: identifier_list • COMA asig

    PUNTOCOMA  desplazar e ir al estado 37
    COMA       desplazar e ir al estado 38


Estado 26

    8 identifier_list: asig •

    $default  reduce usando la regla 8 (identifier_list)


Estado 27

    6 declarations: declarations CONST $@3 identifier_list • PUNTOCOMA
    9 identifier_list: identifier_list • COMA asig

    PUNTOCOMA  desplazar e ir al estado 39
    COMA       desplazar e ir al estado 38


Estado 28

   16 statement: IF LPAREN • expression RPAREN statement ELSE statement
   17          | IF LPAREN • expression RPAREN statement

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 44


Estado 29

   18 statement: WHILE LPAREN • expression RPAREN statement

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 45


Estado 30

   22 statement: PRINT LPAREN • print_list RPAREN PUNTOCOMA

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    STRING      desplazar e ir al estado 46
    MINUSOP     desplazar e ir al estado 43

    print_list  ir al estado 47
    print_item  ir al estado 48
    expression  ir al estado 49


Estado 31

   23 statement: READ LPAREN • read_list RPAREN PUNTOCOMA

    ID  desplazar e ir al estado 50

    read_list  ir al estado 51


Estado 32

   12 statement_list: statement_list • statement
   15 statement: LCORCH statement_list • RCORCH

    IF      desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PRINT   desplazar e ir al estado 16
    READ    desplazar e ir al estado 17
    LCORCH  desplazar e ir al estado 18
    RCORCH  desplazar e ir al estado 52
    DO      desplazar e ir al estado 20
    FOR     desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 23


Estado 33

   19 statement: DO statement • WHILE expression PUNTOCOMA

    WHILE  desplazar e ir al estado 53


Estado 34

   20 statement: FOR ID • INZ expression TO expression statement
   21          | FOR ID • INZ expression COND expression statement

    INZ  desplazar e ir al estado 54


Estado 35

   14 statement: ID ASSIGNOP • expression PUNTOCOMA

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 55


Estado 36

   11 asig: ID ASSIGNOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 56


Estado 37

    4 declarations: declarations VAR $@2 identifier_list PUNTOCOMA •

    $default  reduce usando la regla 4 (declarations)


Estado 38

    9 identifier_list: identifier_list COMA • asig

    ID  desplazar e ir al estado 24

    asig  ir al estado 57


Estado 39

    6 declarations: declarations CONST $@3 identifier_list PUNTOCOMA •

    $default  reduce usando la regla 6 (declarations)


Estado 40

   40 expression: LPAREN • expression RPAREN

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 58


Estado 41

   43 expression: INTLITERAL •

    $default  reduce usando la regla 43 (expression)


Estado 42

   42 expression: ID •

    $default  reduce usando la regla 42 (expression)


Estado 43

   41 expression: MINUSOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 59


Estado 44

   16 statement: IF LPAREN expression • RPAREN statement ELSE statement
   17          | IF LPAREN expression • RPAREN statement
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    RPAREN   desplazar e ir al estado 60
    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70


Estado 45

   18 statement: WHILE LPAREN expression • RPAREN statement
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    RPAREN   desplazar e ir al estado 71
    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70


Estado 46

   27 print_item: STRING •

    $default  reduce usando la regla 27 (print_item)


Estado 47

   22 statement: PRINT LPAREN print_list • RPAREN PUNTOCOMA
   25 print_list: print_list • COMA print_item

    RPAREN  desplazar e ir al estado 72
    COMA    desplazar e ir al estado 73


Estado 48

   24 print_list: print_item •

    $default  reduce usando la regla 24 (print_list)


Estado 49

   26 print_item: expression •
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70

    $default  reduce usando la regla 26 (print_item)


Estado 50

   28 read_list: ID •

    $default  reduce usando la regla 28 (read_list)


Estado 51

   23 statement: READ LPAREN read_list • RPAREN PUNTOCOMA
   29 read_list: read_list • COMA ID

    RPAREN  desplazar e ir al estado 74
    COMA    desplazar e ir al estado 75


Estado 52

   15 statement: LCORCH statement_list RCORCH •

    $default  reduce usando la regla 15 (statement)


Estado 53

   19 statement: DO statement WHILE • expression PUNTOCOMA

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 76


Estado 54

   20 statement: FOR ID INZ • expression TO expression statement
   21          | FOR ID INZ • expression COND expression statement

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 77


Estado 55

   14 statement: ID ASSIGNOP expression • PUNTOCOMA
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    PUNTOCOMA  desplazar e ir al estado 78
    EQOP       desplazar e ir al estado 61
    NEQOP      desplazar e ir al estado 62
    LT         desplazar e ir al estado 63
    LTEQ       desplazar e ir al estado 64
    GT         desplazar e ir al estado 65
    GTEQ       desplazar e ir al estado 66
    PLUSOP     desplazar e ir al estado 67
    MINUSOP    desplazar e ir al estado 68
    MULTOP     desplazar e ir al estado 69
    DIVOP      desplazar e ir al estado 70


Estado 56

   11 asig: ID ASSIGNOP expression •
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70

    $default  reduce usando la regla 11 (asig)


Estado 57

    9 identifier_list: identifier_list COMA asig •

    $default  reduce usando la regla 9 (identifier_list)


Estado 58

   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression
   40           | LPAREN expression • RPAREN

    RPAREN   desplazar e ir al estado 79
    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70


Estado 59

   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression
   41           | MINUSOP expression •

    EQOP   desplazar e ir al estado 61
    NEQOP  desplazar e ir al estado 62
    LT     desplazar e ir al estado 63
    LTEQ   desplazar e ir al estado 64
    GT     desplazar e ir al estado 65
    GTEQ   desplazar e ir al estado 66

    EQOP      [reduce usando la regla 41 (expression)]
    NEQOP     [reduce usando la regla 41 (expression)]
    LT        [reduce usando la regla 41 (expression)]
    LTEQ      [reduce usando la regla 41 (expression)]
    GT        [reduce usando la regla 41 (expression)]
    GTEQ      [reduce usando la regla 41 (expression)]
    $default  reduce usando la regla 41 (expression)


Estado 60

   16 statement: IF LPAREN expression RPAREN • statement ELSE statement
   17          | IF LPAREN expression RPAREN • statement

    IF      desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PRINT   desplazar e ir al estado 16
    READ    desplazar e ir al estado 17
    LCORCH  desplazar e ir al estado 18
    DO      desplazar e ir al estado 20
    FOR     desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 80


Estado 61

   34 expression: expression EQOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 81


Estado 62

   35 expression: expression NEQOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 82


Estado 63

   36 expression: expression LT • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 83


Estado 64

   37 expression: expression LTEQ • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 84


Estado 65

   38 expression: expression GT • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 85


Estado 66

   39 expression: expression GTEQ • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 86


Estado 67

   30 expression: expression PLUSOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 87


Estado 68

   31 expression: expression MINUSOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 88


Estado 69

   32 expression: expression MULTOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 89


Estado 70

   33 expression: expression DIVOP • expression

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    MINUSOP     desplazar e ir al estado 43

    expression  ir al estado 90


Estado 71

   18 statement: WHILE LPAREN expression RPAREN • statement

    IF      desplazar e ir al estado 14
    WHILE   desplazar e ir al estado 15
    PRINT   desplazar e ir al estado 16
    READ    desplazar e ir al estado 17
    LCORCH  desplazar e ir al estado 18
    DO      desplazar e ir al estado 20
    FOR     desplazar e ir al estado 21
    ID      desplazar e ir al estado 22

    statement  ir al estado 91


Estado 72

   22 statement: PRINT LPAREN print_list RPAREN • PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 92


Estado 73

   25 print_list: print_list COMA • print_item

    LPAREN      desplazar e ir al estado 40
    INTLITERAL  desplazar e ir al estado 41
    ID          desplazar e ir al estado 42
    STRING      desplazar e ir al estado 46
    MINUSOP     desplazar e ir al estado 43

    print_item  ir al estado 93
    expression  ir al estado 49


Estado 74

   23 statement: READ LPAREN read_list RPAREN • PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 94


Estado 75

   29 read_list: read_list COMA • ID

    ID  desplazar e ir al estado 95


Estado 76

   19 statement: DO statement WHILE expression • PUNTOCOMA
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    PUNTOCOMA  desplazar e ir al estado 96
    EQOP       desplazar e ir al estado 61
    NEQOP      desplazar e ir al estado 62
    LT         desplazar e ir al estado 63
    LTEQ       desplazar e ir al estado 64
    GT         desplazar e ir al estado 65
    GTEQ       desplazar e ir al estado 66
    PLUSOP     desplazar e ir al estado 67
    MINUSOP    desplazar e ir al estado 68
    MULTOP     desplazar e ir al estado 69
    DIVOP      desplazar e ir al estado 70


Estado 77

   20 statement: FOR ID INZ expression • TO expression statement
   21          | FOR ID INZ expression • COND expression statement
   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    TO       desplazar e ir al estado 97
    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    COND     desplazar e ir al estado 98
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70


Estado 78

   14 statement: ID ASSIGNOP expression PUNTOCOMA •

    $default  reduce usando la regla 14 (statement)


Estado 79

   40 expression: LPAREN expression RPAREN •

    $default  reduce usando la regla 40 (expression)


Estado 80

   16 statement: IF LPAREN expression RPAREN statement • ELSE statement
   17          | IF LPAREN expression RPAREN statement •

    ELSE  desplazar e ir al estado 99

    $default  reduce usando la regla 17 (statement)


Estado 81

   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   34           | expression EQOP expression •
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70

    EQOP      [reduce usando la regla 34 (expression)]
    NEQOP     [reduce usando la regla 34 (expression)]
    LT        [reduce usando la regla 34 (expression)]
    LTEQ      [reduce usando la regla 34 (expression)]
    GT        [reduce usando la regla 34 (expression)]
    GTEQ      [reduce usando la regla 34 (expression)]
    PLUSOP    [reduce usando la regla 34 (expression)]
    MINUSOP   [reduce usando la regla 34 (expression)]
    MULTOP    [reduce usando la regla 34 (expression)]
    DIVOP     [reduce usando la regla 34 (expression)]
    $default  reduce usando la regla 34 (expression)


Estado 82

   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   35           | expression NEQOP expression •
   36           | expression • LT expression
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70

    EQOP      [reduce usando la regla 35 (expression)]
    NEQOP     [reduce usando la regla 35 (expression)]
    LT        [reduce usando la regla 35 (expression)]
    LTEQ      [reduce usando la regla 35 (expression)]
    GT        [reduce usando la regla 35 (expression)]
    GTEQ      [reduce usando la regla 35 (expression)]
    PLUSOP    [reduce usando la regla 35 (expression)]
    MINUSOP   [reduce usando la regla 35 (expression)]
    MULTOP    [reduce usando la regla 35 (expression)]
    DIVOP     [reduce usando la regla 35 (expression)]
    $default  reduce usando la regla 35 (expression)


Estado 83

   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   36           | expression LT expression •
   37           | expression • LTEQ expression
   38           | expression • GT expression
   39           | expression • GTEQ expression

    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70

    EQOP      [reduce usando la regla 36 (expression)]
    NEQOP     [reduce usando la regla 36 (expression)]
    LT        [reduce usando la regla 36 (expression)]
    LTEQ      [reduce usando la regla 36 (expression)]
    GT        [reduce usando la regla 36 (expression)]
    GTEQ      [reduce usando la regla 36 (expression)]
    PLUSOP    [reduce usando la regla 36 (expression)]
    MINUSOP   [reduce usando la regla 36 (expression)]
    MULTOP    [reduce usando la regla 36 (expression)]
    DIVOP     [reduce usando la regla 36 (expression)]
    $default  reduce usando la regla 36 (expression)


Estado 84

   30 expression: expression • PLUSOP expression
   31           | expression • MINUSOP expression
   32           | expression • MULTOP expression
   33           | expression • DIVOP expression
   34           | expression • EQOP expression
   35           | expression • NEQOP expression
   36           | expression • LT expression
   37           | expression • LTEQ expression
   37           | expression LTEQ expression •
   38           | expression • GT expression
   39           | expression • GTEQ expression

    EQOP     desplazar e ir al estado 61
    NEQOP    desplazar e ir al estado 62
    LT       desplazar e ir al estado 63
    LTEQ     desplazar e ir al estado 64
    GT       desplazar e ir al estado 65
    GTEQ     desplazar e ir al estado 66
    PLUSOP   desplazar e ir al estado 67
    MINUSOP  desplazar e ir al estado 68
    MULTOP   desplazar e ir al estado 69
    DIVOP    desplazar e ir al estado 70

    EQOP      [reduce usando la regla 37 (expression)]
    NEQOP     [reduce usando la regla 37 (expression)]
    LT        [reduce usando la regla 37 (expression)]
    LTEQ      [reduce usando la regla 37 (expression)]
    GT        [reduce usando la regla 37 (expression)]
    GTEQ      [reduce usando la regla 37 (expression)]
    PLUSOP    [reduce usando la regla 37 (expression)]
    MINUSOP   [reduce usando la regla 37 (expression)]
    MULTOP    [reduce usando la regla 37 (expression)]
    DIVOP     [reduce usando la regla 37 (expression)]
    $default  reduce usando la regla 37 (expression)


Estado 85
